src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>npsp__Recurring_Donation_Installment_Name__c</fullName>
        <description>Installment name for inclusion in Opportunity Naming. Shows the installment number in parenthesis for open ended recurring donations, or the installment number out of the total for recurring donations with a set number of installments.</description>
        <formula>IF(
ISBLANK(npe03__Recurring_Donation__c),
&apos;&apos;,
  IF(
    OR(ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Open&apos;),ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Closed&apos;),ISBLANK(npe03__Recurring_Donation__r.npe03__Installments__c)),
    &apos;(&apos;&amp;TEXT(npsp__Recurring_Donation_Installment_Number__c)&amp;&apos;)&apos;,
    &apos;(&apos;&amp;TEXT(npsp__Recurring_Donation_Installment_Number__c)&amp;&apos; &apos;&amp;$Label.npsp__oppinstallmentsof&amp;&apos; &apos;&amp;TEXT(npe03__Recurring_Donation__r.npe03__Installments__c)&amp;&apos;)&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Installment name for inclusion in Opportunity Naming. Shows the installment number in parenthesis for open ended recurring donations, or the installment number out of the total for recurring donations with a set number of installments.</inlineHelpText>
        <label>Recurring Donation Installment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation_Installment_Number__c</fullName>
        <description>The installment number of this opportunity&apos;s recurring donation schedule.</description>
        <inlineHelpText>The installment number of this opportunity&apos;s recurring donation schedule.</inlineHelpText>
        <label>Recurring Donation Installment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Requested_Amount__c</fullName>
        <description>The amount you are requesting. This number might be different from the final award amount.</description>
        <inlineHelpText>The amount you are requesting. This number might be different from the final award amount.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Tribute_Type__c</fullName>
        <description>Indicates whether the gift is in honor or memory of an individual.</description>
        <inlineHelpText>Indicates whether the gift is in honor or memory of an individual.</inlineHelpText>
        <label>Tribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honor</fullName>
                </value>
                <value>
                    <fullName>Memorial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>marathon</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Corporate_Gifts</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.cfg_Corporate_Gift</value>
        </filters>
        <label>Corporate Gifts</label>
    </listViews>
    <listViews>
        <fullName>DD_Donations</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ddrive__Donor__c</columns>
        <columns>ddrive__Level__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.ddrive__DD_Donations</value>
        </filters>
        <label>DD Donations</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Donations</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Donation</value>
        </filters>
        <label>Donations</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Open_DD_Donations</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ddrive__Participant_Type__c</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>GL_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.ddrive__DD_Donations,Opportunity.ddrive__DD_Ticket_Holders</value>
        </filters>
        <filters>
            <field>c4g_Appeal_Code__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>GL_Account__c</field>
            <operation>equals</operation>
        </filters>
        <label>Open DD Donations</label>
    </listViews>
    <listViews>
        <fullName>Pledges</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.c4g_Pledge</value>
        </filters>
        <filters>
            <field>c4g_Appeal_Code__c</field>
            <operation>equals</operation>
            <value>19AM_GENERAL</value>
        </filters>
        <label>Pledges</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>ddrive__DD_Donations</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.ddrive__DD_Donations</value>
        </filters>
        <label>DD Donations</label>
    </listViews>
    <listViews>
        <fullName>ddrive__Ticket_Holders</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ddrive__Donor_Constituent_Type__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ddrive__Ticket_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.ddrive__DD_Ticket_Holders</value>
        </filters>
        <label>DD Ticket Holders</label>
    </listViews>
    <listViews>
        <fullName>npsp__To_Be_Acknowledged</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>c4g_Appeal_Code__c</columns>
        <columns>npsp__Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>npsp__Acknowledgment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Acknowledgment_Status__c</field>
            <operation>equals</operation>
            <value>To Be Acknowledged,Email Acknowledgment Not Sent</value>
        </filters>
        <label>To Be Acknowledged</label>
    </listViews>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Donation Received</description>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Grant</businessProcess>
        <description>Grant Received</description>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Major_Gift</fullName>
        <active>false</active>
        <businessProcess>Major Gift</businessProcess>
        <description>Large Donation from a Major Donor</description>
        <label>Major Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>Matching_Gift</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Matching Donation from an Donor&apos;s Employer or other Organization</description>
        <label>Matching Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>NPSP_Default</fullName>
        <active>true</active>
        <businessProcess>NPSP_Default</businessProcess>
        <label>NPSP Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>c4g_In_Kind_Gift</fullName>
        <active>true</active>
        <businessProcess>In-Kind Gift</businessProcess>
        <label>In-Kind Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>c4g_Planned_Gift_Bequest</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>A planned gift or bequest from a constituent</description>
        <label>Planned Gift/Bequest</label>
    </recordTypes>
    <recordTypes>
        <fullName>c4g_Pledge</fullName>
        <active>true</active>
        <businessProcess>Pledge</businessProcess>
        <description>Pledge received from an individual or an organization</description>
        <label>Pledge</label>
    </recordTypes>
    <recordTypes>
        <fullName>cfg_Corporate_Gift</fullName>
        <active>true</active>
        <businessProcess>Corporate Gift</businessProcess>
        <description>Corporate Gifts and Sponsorships</description>
        <label>Corporate Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>ddrive__DD_Donations</fullName>
        <active>true</active>
        <businessProcess>ddrive__DD Default</businessProcess>
        <description>Donations from DonorDrive Donations and Event Sponsors</description>
        <label>DD Donations</label>
    </recordTypes>
    <recordTypes>
        <fullName>ddrive__DD_Ticket_Holders</fullName>
        <active>true</active>
        <businessProcess>ddrive__DD Default</businessProcess>
        <description>Information from DonorDrive Ticket Holders</description>
        <label>DD Ticket Holders</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Appeal_Code_Required</fullName>
        <active>true</active>
        <description>An Appeal Code is required when the opportunity is closed, unless the record type is In-Kind Gift, DD Donation or DD Ticket Holder</description>
        <errorConditionFormula>IF((IsClosed = TRUE &amp;&amp;  RecordType.Name &lt;&gt; &quot;DD Donations&quot; &amp;&amp; RecordType.Name &lt;&gt; &quot;DD Ticket Holders&quot; &amp;&amp; RecordType.Name &lt;&gt; &quot;In-Kind Gift&quot;),c4g_Appeal_Code__c  = NULL, FALSE)</errorConditionFormula>
        <errorDisplayField>c4g_Appeal_Code__c</errorDisplayField>
        <errorMessage>An Appeal Code is required when the opportunity is closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Distribution_Code_Required</fullName>
        <active>true</active>
        <description>A Distribution Code is required when the opportunity is closed, unless the record type is In-Kind Gift, DD Donation or DD Ticket Holder</description>
        <errorConditionFormula>IF((IsClosed = TRUE &amp;&amp; RecordType.Name &lt;&gt; &quot;DD Donations&quot; &amp;&amp; RecordType.Name &lt;&gt; &quot;DD Ticket Holders&quot; &amp;&amp; RecordType.Name &lt;&gt; &quot;In-Kind Gift&quot;), GL_Account__c = NULL, FALSE)</errorConditionFormula>
        <errorDisplayField>GL_Account__c</errorDisplayField>
        <errorMessage>A Distribution Code is required when the opportunity is closed</errorMessage>
    </validationRules>
</CustomObject>